--- a/data_analysis_code.Rmd
+++ b/data_analysis_code.Rmd
@@ -621,17 +621,8 @@ katie.SL.library <- c("SL.mean",
 #------------------------------------------
 # dataframe X with baseline covariates and exposure
 X <- subset(ObsData, 
-            select=c(A, 
-                     air_basin_4_bins, 
-                     asian_filipino_percent, 
-                     two_none_aian_pi_af_am_percent, 
-                     hisp_latinx_percent, 
-                     english_learner_percent, 
-                     frpm_percent, 
-                     district_cost_per_pupil, 
-                     student_teacher_ratio, 
-                     cred_percent,
-                     school_k_12_enrollment))
+            select = c(A, 
+                       adjustment_set_variables))
 
 # set the exposure=1 in X1 and the exposure=0 in X0
 X1 <- X0 <- X
