--- a/data_analysis_code.Rmd
+++ b/data_analysis_code.Rmd
@@ -10,7 +10,7 @@ output: html_document
 library(extrafont)
 
 # # loads fonts 
-font_import(pattern = "Raleway")
+# font_import(pattern = "Raleway")
 
 library(praise)
 library(tidyverse)
@@ -559,6 +559,18 @@ hi2
 ```
 
 
+```{r old code not to run}
+
+# # reduce runs of biglasso from 100 to 5 to save time
+# new.algorithm.1 = create.Learner("SL.biglasso", 
+#                                  params = list(nlambda = 5))
+# 
+# new.algorithm.2 = create.Learner("SL.randomForest", 
+#                                 params = list(ntrees = 10))
+
+```
+
+
 
 ```{r KATIE attempt at simple substitution}
 
@@ -593,14 +605,13 @@ ObsData <-
 
 ObsData <- as.data.frame(ObsData)
 
-set.seed(252)
-
-# # reduce runs of biglasso from 100 to 5 to save time
-# new.algorithm.1 = create.Learner("SL.biglasso", 
-#                                  params = list(nlambda = 5))
-# 
-# new.algorithm.2 = create.Learner("SL.randomForest", 
-#                                 params = list(ntrees = 10))
+# subset of rows
+little_data <- ObsData[sample(x = 1:nrow(ObsData),
+                              size = 1000,
+                              replace = F),]
+nrow(little_data)
+duplicated(little_data$cds_code)
+table(little_data$A)
 
 # specify SL library
 listWrappers()
@@ -608,21 +619,70 @@ katie.SL.library <- c("SL.mean",
                       "SL.glm", 
                       "SL.glm.interaction", 
                       "SL.bayesglm", 
-                      "SL.polymars"
+                      # "SL.polymars", 
+                      "SL.rpartPrune")
                       # "SL.biglasso"
                       # "SL.extraTrees"
                       # "SL.glmnet"
                       # new.algorithm.2$names
                       # "SL.rpartPrune" # this one worked
-                      )
+
+################################
+# SIMPLE SUBSTITUTION HARD CODED (sample data)
+################################
 
 #------------------------------------------
-# 2. Estimate Qbar_0(A,W) with Super Learner
+# Estimate Qbar_0(A,W) with Super Learner
+#------------------------------------------
+# dataframe X with baseline covariates and exposure
+X <- subset(little_data, 
+            select = c(A, 
+                       get(adjustment_set_variables)))
+
+# set the exposure=1 in X1 and the exposure=0 in X0
+X1 <- X0 <- X
+X1$A <- 1 # under exposure
+X0$A <- 0 # under control
+
+# call Super Learner
+QbarSL <- SuperLearner(Y = little_data$Y, 
+                           X = X, 
+                           SL.library = katie.SL.library,
+                           # cluster = cluster, 
+                           family = "binomial")
+QbarSL
+
+summary(QbarSL$SL.predict)
+length(QbarSL$SL.predict)
+
+# get the expected PM2.5, given the observed exposure and covariates
+QbarAW <- predict(QbarSL, newdata = little_data)$pred
+# expected injury severity, given A=1 and covariates
+Qbar1W <- predict(QbarSL, newdata = X1)$pred
+# expected injury severity, given A=0 and covariates
+Qbar0W <- predict(QbarSL, newdata = X0)$pred
+# the fitted value at the observed exposure should equal the fitted value
+# under when A = a
+tail(data.frame(A = little_data$A, QbarAW, Qbar1W, Qbar0W))
+
+# note the simple substitution estimator would be
+PsiHat.SS <- mean(Qbar1W - Qbar0W)
+
+PsiHat.SS
+
+
+
+################################
+# SIMPLE SUBSTITUTION HARD CODED (full data)
+################################
+
+#------------------------------------------
+# Estimate Qbar_0(A,W) with Super Learner
 #------------------------------------------
 # dataframe X with baseline covariates and exposure
 X <- subset(ObsData, 
             select = c(A, 
-                       adjustment_set_variables))
+                       get(adjustment_set_variables)))
 
 # set the exposure=1 in X1 and the exposure=0 in X0
 X1 <- X0 <- X
@@ -634,25 +694,34 @@ QbarSL <- SuperLearner(Y = ObsData$Y,
                            X = X, 
                            SL.library = katie.SL.library,
                            # cluster = cluster, 
-                           family = "quasibinomial")
+                           family = "binomial")
 QbarSL
 
 summary(QbarSL$SL.predict)
 length(QbarSL$SL.predict)
 
-# get the expected PM2.5 , given the observed exposure and covariates
-QbarAW <- predict(QbarSL, newdata=ObsData)$pred
+# get the expected PM2.5, given the observed exposure and covariates
+QbarAW <- predict(QbarSL, newdata = ObsData)$pred
 # expected injury severity, given A=1 and covariates
-Qbar1W <- predict(QbarSL, newdata=X1)$pred
+Qbar1W <- predict(QbarSL, newdata = X1)$pred
 # expected injury severity, given A=0 and covariates
-Qbar0W <- predict(QbarSL, newdata=X0)$pred
+Qbar0W <- predict(QbarSL, newdata = X0)$pred
 # the fitted value at the observed exposure should equal the fitted value
-# under when A=a
-tail(data.frame(A=ObsData$A, QbarAW, Qbar1W, Qbar0W))
+# under when A = a
+tail(data.frame(A = ObsData$A, QbarAW, Qbar1W, Qbar0W))
 
 # note the simple substitution estimator would be
 PsiHat.SS <- mean(Qbar1W - Qbar0W)
+
 PsiHat.SS
+
+
+################################
+# RAW IPTW HARD CODED (sample data)
+################################
+
+
+
 
 #------------------------------------------
 # Playing with LTMLE
