--- a/data_analysis_code.Rmd
+++ b/data_analysis_code.Rmd
@@ -22,6 +22,7 @@ library(psych)
 library(SuperLearner)
 library(ltmle)
 library(arm)
+library(rpart)
 
 # # loads fonts 
 # font_import()
@@ -598,9 +599,7 @@ adjustment_set_variables <-
 
 ObsData <- 
   dataset_complete_cases_working %>% 
-  mutate(id_cds = as.numeric(as.factor(cds_code))) %>% 
-  dplyr::select(id = id_cds, 
-                Y = math_proportion,
+  dplyr::select(Y = math_proportion,
                 A = pm25_12_plus, 
                 all_of(adjustment_set_variables))
 
@@ -620,55 +619,58 @@ katie.SL.library <- c("SL.mean",
                       "SL.glm", 
                       "SL.glm.interaction", 
                       "SL.bayesglm", 
-                      # "SL.polymars", 
-                      "SL.rpartPrune")
+                      "SL.gam", 
+                      "SL.loess")
+                      # "SL.rpartPrune")
                       # "SL.biglasso"
                       # "SL.extraTrees"
                       # "SL.glmnet"
                       # new.algorithm.2$names
+                      # "SL.polymars"
+                      # "SL.ridge"
+                      # "SL.caret"
+# "SL.biglasso"
 
-# ################################
-# # SIMPLE SUBSTITUTION HARD CODED (sample data)
-# ################################
-# 
-# #------------------------------------------
-# # Estimate Qbar_0(A,W) with Super Learner
-# #------------------------------------------
-# # dataframe X with baseline covariates and exposure
-# X <- subset(little_data, 
-#             select = c(A, 
-#                        get(adjustment_set_variables)))
-# 
-# # set the exposure=1 in X1 and the exposure=0 in X0
-# X1 <- X0 <- X
-# X1$A <- 1 # under exposure
-# X0$A <- 0 # under control
-# 
-# # call Super Learner
-# QbarSL <- SuperLearner(Y = little_data$Y, 
-#                            X = X, 
-#                            SL.library = katie.SL.library,
-#                            # cluster = cluster, 
-#                            family = "binomial")
-# QbarSL
-# 
-# summary(QbarSL$SL.predict)
-# length(QbarSL$SL.predict)
-# 
-# # get the expected PM2.5, given the observed exposure and covariates
-# QbarAW <- predict(QbarSL, newdata = little_data)$pred
-# # expected injury severity, given A=1 and covariates
-# Qbar1W <- predict(QbarSL, newdata = X1)$pred
-# # expected injury severity, given A=0 and covariates
-# Qbar0W <- predict(QbarSL, newdata = X0)$pred
-# # the fitted value at the observed exposure should equal the fitted value
-# # under when A = a
-# tail(data.frame(A = little_data$A, QbarAW, Qbar1W, Qbar0W))
-# 
-# # note the simple substitution estimator would be
-# PsiHat.SS <- mean(Qbar1W - Qbar0W)
-# 
-# PsiHat.SS
+################################
+# SIMPLE SUBSTITUTION HARD CODED (sample data)
+################################
+
+#------------------------------------------
+# Estimate Qbar_0(A,W) with Super Learner
+#------------------------------------------
+# dataframe X with baseline covariates and exposure
+X <- subset(little_data,
+            select = c(A,
+                       get(adjustment_set_variables)))
+
+# set the exposure=1 in X1 and the exposure=0 in X0
+X1 <- X0 <- X
+X1$A <- 1 # under exposure
+X0$A <- 0 # under control
+
+# call Super Learner
+QbarSL <- SuperLearner(Y = little_data$Y,
+                           X = X,
+                           SL.library = katie.SL.library,
+                           # cluster = cluster,
+                           family = "quasibinomial")
+QbarSL
+summary(QbarSL)
+
+# get the expected PM2.5, given the observed exposure and covariates
+QbarAW <- predict(QbarSL, newdata = little_data)$pred
+# expected injury severity, given A=1 and covariates
+Qbar1W <- predict(QbarSL, newdata = X1)$pred
+# expected injury severity, given A=0 and covariates
+Qbar0W <- predict(QbarSL, newdata = X0)$pred
+# the fitted value at the observed exposure should equal the fitted value
+# under when A = a
+tail(data.frame(A = little_data$A, QbarAW, Qbar1W, Qbar0W))
+
+# note the simple substitution estimator would be
+PsiHat.SS <- mean(Qbar1W - Qbar0W)
+
+PsiHat.SS
 
 
 
@@ -983,9 +985,7 @@ adjustment_set_variables <-
 
 ObsData <- 
   dataset_complete_cases_working %>% 
-  mutate(id_cds = as.numeric(as.factor(cds_code))) %>% 
-  dplyr::select(id = id_cds, 
-                Y = math_proportion,
+  dplyr::select(Y = math_proportion,
                 A = pm25_12_plus, 
                 all_of(adjustment_set_variables))
 
@@ -1000,7 +1000,7 @@ duplicated(little_data$cds_code)
 table(little_data$A)
 
 # specify SL library
-listWrappers()
+# listWrappers()
 katie.SL.library <- c("SL.mean", 
                       "SL.glm", 
                       "SL.glm.interaction", 
@@ -1013,7 +1013,9 @@ katie.SL.library <- c("SL.mean",
                       # new.algorithm.2$names
 
 
-
+################################
+# HERE LIES THE FUNCTION
+################################
 
 run.tmle.katie <- function(ObsData, SL.library, adjustment_set, id = NULL){
 
@@ -1036,10 +1038,11 @@ X0$A <- 0 # under control
 
 # call Super Learner
 QbarSL <- SuperLearner(Y = ObsData$Y, 
-                           X = X, 
-                           SL.library = katie.SL.library,
-                           # cluster = cluster, 
-                           family = "binomial")
+                       X = X, 
+                       SL.library = katie.SL.library,
+                       # cluster = cluster, 
+                       family = "binomial", 
+                       id = id)
 QbarSL
 
 summary(QbarSL$SL.predict)
@@ -1073,7 +1076,8 @@ gHatSL <- SuperLearner(Y = ObsData$A,
                        X = subset(ObsData, 
                                   select = -c(A, Y, id)),
                        SL.library = katie.SL.library, 
-                       family = "binomial")
+                       family = "binomial", 
+                       id = id)
 
 # generate predicted prob being exposed, given baseline covariates
 gHat1W <- gHatSL$SL.predict
@@ -1161,8 +1165,8 @@ names(Qbar.star) <- c('QbarAW.star',
 list(estimates = estimates, Qbar.star = Qbar.star, H.AW = H.AW)
 }
 
-out <- run.tmle.katie(ObsData = ObsData, 
-                      adjustment_set = adjustment_set_variables, 
+out <- run.tmle.katie(ObsData = ObsData,
+                      adjustment_set = adjustment_set_variables,
                       SL.library = SL.library)
 
 est <- out$estimates
@@ -1174,7 +1178,97 @@ est*100
 
 ```{r bootstrap}
 
+########################################
+# NP-Boot for B=500 bootstrapped samples
+########################################
 
+katie.SL.library <- c("SL.mean", 
+                      "SL.glm", 
+                      "SL.glm.interaction", 
+                      "SL.bayesglm", 
+                      # "SL.polymars", 
+                      "SL.rpartPrune")
+
+dataset_complete_cases_working <- 
+  dataset_complete_cases %>% 
+  mutate(math_proportion = math_standard_met/100,
+         pm25_12_plus = ifelse(pm25_12_plus == "yes", 1, 0),
+         air_basin_4_bins = factor(air_basin_4_bins))
+
+adjustment_set_variables <- 
+  c("air_basin_4_bins", 
+    "asian_filipino_percent", 
+    "two_none_aian_pi_af_am_percent",
+    "hisp_latinx_percent", 
+    "english_learner_percent", 
+    "frpm_percent",
+    "district_cost_per_pupil", 
+    "student_teacher_ratio", 
+    "cred_percent",
+    "school_k_12_enrollment")
+
+ObsData <- 
+  dataset_complete_cases_working %>% 
+  dplyr::select(Y = math_proportion,
+                A = pm25_12_plus, 
+                all_of(adjustment_set_variables))
+
+ObsData <- as.data.frame(ObsData)
+
+# subset of rows
+little_data <- ObsData[sample(x = 1:nrow(ObsData),
+                              size = 2000,
+                              replace = F),]
+
+# number of rows
+n = nrow(little_data)
+
+# number of bootstrap samples
+B = 20
+
+# data frame for estimates based on the boot strap sample
+estimates <- data.frame(matrix(NA, nrow = B, ncol = 4))
+
+# make an id variable
+little_data$id <- 1:n
+
+# for loop from b=1 to total number of bootstrap samples
+for(b in 1:B){
+
+  # sample the indices 1 to n with replacement
+  bootIndices<- sample(1:n, replace = T)
+  bootData<- little_data[bootIndices,]
+  
+  # calling the above function
+  estimates[b,]<- run.tmle.katie(ObsData = bootData, SL.library=SL.library, id=bootData$id)$estimates
+
+  # keep track of the iterations completed
+  print(b)
+}
+
+colnames(estimates)<-c("SimpSubs", "IPTW.HT", "IPTW", "TMLE")
+save(estimates, file='little_run.Rdata')
+
+summary(estimates)
+
+#saving the histograms as a pdf
+pdf(file="RLab6_hist_boot.pdf")
+par(mfrow=c(4,1))
+hist(estimates[,1], 
+     main = "Histogram of point estimates from the Simple Substitution estimator over B bootstrapped samples", 
+     xlab = "Point Estimates")
+hist(estimates[,2], 
+     main = "Histogram of point estimates from IPTW HT estimator over B bootstrapped samples", xlab="Point Estimates")
+hist(estimates[,3], main="Histogram of point estimates from IPTW over B bootstrapped samples", xlab="Point Estimates")
+hist(estimates[,4], main="Histogram of point estimates from TMLE over B bootstrapped samples", xlab="Point Estimates")
+dev.off()
+
+```
+
+
+```{r playing with wrappers}
+
+arm::bayesglm(Y ~ ., data = ObsData, family = "binomial")
 
 ```
 
